--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,5 @@ demos/
 extras/documentation
 .idea/workspace.xml
 .idea/bds.iml
-.idea/workspace.xml
-.idea/workspace.xml
-.idea/workspace.xml
-.idea/workspace.xml
+.idea/inspectionProfiles/
+database/
